--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -17,70 +17,66 @@
  
     <header>
         <nav> 
-        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="ohmyfood@2x.svg" alt="logo ohmyfood">  
+        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
         </nav>
     </header>
-
- <main> 
-    
-    <div class="mealTitle">
-        <img src="images/alafrançaise.jpg" alt="à la française">
-        <h1><strong>À la française</strong><i class="far fa-heart"></i></h1>
-    </div>  
-  
-    <section class="starters">
+  <section class="mealPicture"><img src="images/alafrançaise.jpg" alt="à la française"></section>
+       
+  <main class="mealBloc"> 
+  <h1><strong>À la française</strong><i class="far fa-heart"></i></h1> 
+    <section class="Starters">
         <h2>Entrées</h2>
-          <div class="starter1"> 
+          <div class="mealBoxs"> 
             <h3>Tartare de poulpe acidulé</h3>
-            <p>Aux zestes d'orange 25€</p> 
+            <p>Aux zestes d'orange</p> <span class="prices">25€</span>
             <i class="fas fa-check"></i>
           </div>
-          <div class="starter2">
+          <div class="mealBoxs">
               <h3>Velouté de légumes d'antan</h3>
-              <p>Carotte, panais, topinambour 35€</p>
+              <p>Carotte, panais, topinambour</p> <span class="prices">35€</span>
               <i class="fas fa-check"></i>
           </div> 
-          <div class="starter3">
+          <div class="mealBoxs">
               <h3>Soupe à l'oignon</h3>
-              <p>Revisitée 20€</p>
+              <p>Revisitée</p><span class="prices">20€</span>
               <i class="fas fa-check"></i>
           </div>   
     </section>
 
     <section class="mainMeals">
         <h2>Plats</h2>
-        <div class="mainMeal1">
+        <div class="mealBoxs">
             <h3>Coquilles Saint-Jacques</h3>
-            <p>Accompagnées d'une purée de panais 40€</p>
+            <p>Accompagnées d'une purée de panais</p><span class="prices">40€</span>
             <i class="fas fa-check"></i>
         </div> 
-        <div class="mainMeal2">
+        <div class="mealBoxs">
             <h3>Magret de canard</h3>
-            <p>Et parmentier de pommes de terre 35€</p>
+            <p>Et parmentier de pommes de terre</p><span class="prices">35€</span>
             <i class="fas fa-check"></i>
         </div> 
-        <div class="mainMeal3">
+        <div class="mealBoxs">
             <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-            <p>Sur son lit de gnocchis aux légumes 44€</p>
+            <p>Sur son lit de gnocchis aux légumes</p><span class="prices">44€</span>
             <i class="fas fa-check"></i>
         </div>
     </section>
 
-    <section class="desserts">
+    <section class="Desserts">
        <h2>Desserts</h2> 
-       <div class="dessert1">
+       <div class="mealBoxs">
             <h3>Pétales de violettes glacés</h3>
-            <p>Et purée de noisettes 18€</p>
+            <p>Et purée de noisettes</p><span class="prices">18€</span>
             <i class="fas fa-check"></i>
         </div>
-       <div class="dessert2">
+       <div class="mealBoxs">
             <h3>Fondant au chocolat</h3>
-            <p>Revisité 22€</p>
+            <p>Revisité</p><span class="prices">22€</span>
             <i class="fas fa-check"></i>
         </div>
-       <div class="dessert3">
+       <div class="mealBoxs">
             <h3>Millefeuille croustillant</h3>
-            <p>Myrtilles et pâte d’amande 23€</p>
+            <p>Myrtilles et pâte d’amande</p><span class="prices">23€</span>
             <i class="fas fa-check"></i>
        </div>
     </section> 
@@ -91,8 +87,8 @@
  
  <footer>
     <div class="footerContain">
-        <img src="ohmyfood@2x.svg" alt="logo ohmyfood">
         <ul> 
+            <li><h3>ohmyfood</h3></li>
             <li><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</li>
             <li><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</li>
             <li>Mentions légales</li>
