css global en cours de finalisation pour le mobile + html fini pour les pages de menus

--- a/delicedessens.html
+++ b/delicedessens.html
@@ -17,70 +17,63 @@
  
     <header>
         <nav> 
-        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="ohmyfood@2x.svg" alt="logo ohmyfood">  
+        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
         </nav>
     </header>
+    <section class="mealPicture"><img src="images/delicedessens.jpg" alt="le délice des sens"></section>
     
- <main> 
-    <div class="mealTitle"> 
-        <img src="images/delicedessens.jpg" alt="le délice des sens">
+    <main class="mealBloc"> 
+        
         <h1><strong>Le délice des sens</strong><i class="far fa-heart"></i></h1>
-    </div>  
-  
+
     <section class="starters">
-        <h2>Entrées</h2>
-        <div class="starter1">
+        <h2>ENTRÉES</h2>
+        <div class="greenBorder"></div>
+        <div class="mealBoxs">
               <h3>Tartare de thon</h3>
-              <p>Assaisonné au yuzu 25€</p>
-              <i class="fas fa-check"></i>
+              <p>Assaisonné au yuzu <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>    
         </div> 
-        <div class="starter2">
+        <div class="mealBoxs">
               <h3>Bouchée de homard croustillant</h3>
-              <p>Et sa farandole de petits légumes 35€</p>
-              <i class="fas fa-check"></i>
+              <p>Et sa farandole de petits légumes<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="starter3">
+        <div class="mealBoxs">
               <h3>Velouté de cèpes</h3>
-              <p>Aux truffes 20€</p>
-              <i class="fas fa-check"></i>
+              <p>Aux truffes <span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p>            
         </div>       
     </section>
 
     <section class="mainMeals">
-        <h2>Plats</h2>
-        <div class="mainMeal1">
+        <h2>PLATS</h2>
+        <div class="greenBorder"></div>
+        <div class="mealBoxs">
                <h3>Poulet rôti aux herbes de Provence</h3>
-               <p>Et sa crème de truffe 40€</p>
-               <i class="fas fa-check"></i>
+               <p>Et sa crème de truffe <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p> 
         </div> 
-        <div class="mainMeal2">
+        <div class="mealBoxs">
                <h3>Langouste rôtie</h3>
-               <p>Et ses légumes de saison 35€</p>
-               <i class="fas fa-check"></i>
+               <p>Et ses légumes de saison <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>     
         </div> 
-        <div class="mainMeal3">
+        <div class="mealBoxs">
                <h3>Côte de boeuf Angus</h3>
-               <p>Et sa purée de panais 44€</p>
-               <i class="fas fa-check"></i>
+               <p>Et sa purée de panais<span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>     
         </div>     
     </section>
 
     <section class="desserts">
-        <h2>Desserts</h2> 
-        <div class="dessert1">
+        <h2>DESSERTS</h2> 
+        <div class="greenBorder"></div>
+        <div class="mealBoxs">
                <h3>Farandole de desserts</h3>
-               <p>Du chef 18€</p>
-               <i class="fas fa-check"></i>
+               <p>Du chef <span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p> 
         </div>
-       <div class="dessert2">
+       <div class="mealBoxs">
                 <h3>Crème brulée</h3>
-                <p>Revisitée 22€</p>
-                <i class="fas fa-check"></i>
+                <p>Revisitée<span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>   
        </div>
-       <div class="dessert3">
+       <div class="mealBoxs">
                 <h3>Tiramisu</h3>
-                <p>À la noisette 23€</p>
-                <i class="fas fa-check"></i>
+                <p>À la noisette<span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>     
        </div>
     </section> 
 
@@ -90,8 +83,8 @@
  
  <footer>
     <div class="footerContain">
-        <img src="ohmyfood@2x.svg" alt="logo ohmyfood">
         <ul> 
+            <li><h3>ohmyfood</h3></li>
             <li><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</li>
             <li><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</li>
             <li>Mentions légales</li>
