--- a/palettedesgouts.html
+++ b/palettedesgouts.html
@@ -17,70 +17,64 @@
  
     <header>
         <nav> 
-        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="ohmyfood@2x.svg" alt="logo ohmyfood">  
+        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
         </nav>
     </header>
    
- <main> 
-    <div class="mealTitle">
-        <img src="images/palettedugout.jpg" alt="la palette du goût">
+        <section class="mealPicture"><img src="images/palettedugout.jpg" alt="la palette du goût"></section>
+
+    <main class="mealBloc">     
+
         <h1><strong>La palette du goût</strong><i class="far fa-heart"></i></h1>
-    </div>  
-  
+    
     <section class="starters">
-        <h2>Entrées</h2>
-        <div class="starter1">
+        <h2>ENTRÉES</h2>
+        <div class="greenBorder"></div>
+        <div class="mealBoxs">
             <h3>Fricassée d'escargot</h3>
-            <p>Au piment d'Espelette 25€</p>
-            <i class="fas fa-check"></i>
+            <p>Au piment d'Espelette <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="starter2">
+        <div class="mealBoxs">
             <h3>Foie gras de canard mi-cuit</h3>
-            <p>Et ses copeaux de truffe noire 35€</p>
-            <i class="fas fa-check"></i>
+            <p>Et ses copeaux de truffe noire <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="starter3">
+        <div class="mealBoxs">
             <h3>Oeuf au plat</h3>
-            <p>Assaisonné à la truffe sur lit de caviar 20€</p>
-            <i class="fas fa-check"></i>
+            <p>Assaisonné à la truffe sur lit de caviar<span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p>
         </div>
     </section>
 
     <section class="mainMeals">
-        <h2>Plats</h2>
-        <div class="mainMeal1">
+        <h2>PLATS</h2>
+        <div class="greenBorder"></div>
+        <div class="mealBoxs">
             <h3>Filet de boeuf aux herbes</h3>
-            <p>Accompagné de sa ribambelle de légumes 40€</p>
-            <i class="fas fa-check"></i>
+            <p>Accompagné de sa ribambelle de légumes <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mainMeal2">
+        <div class="mealBoxs">
             <h3>Parmentier de queue de boeuf</h3>
-            <p>À la truffe noire sur sa purée de panais 35€</p>
-            <i class="fas fa-check"></i>
+            <p>À la truffe noire sur sa purée de panais <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mainMeal3">
+        <div class="mealBoxs">
             <h3>Filet de turbot</h3>
-            <p>Aux agrumes 44€</p>
-            <i class="fas fa-check"></i>
+            <p>Aux agrumes <span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>
         </div>
     </section>
 
     <section class="desserts">
-        <h2>Desserts</h2> 
-       <div class="dessert1">
+        <h2>DESSERTS</h2> 
+        <div class="greenBorder"></div>
+       <div class="mealBoxs">
            <h3>Paris-Brest</h3>
-           <p>Revisité 18€</p>
-           <i class="fas fa-check"></i>
+           <p>Revisité<span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p>
         </div>
-       <div class="dessert2">
+       <div class="mealBoxs">
            <h3>Macaron au chocolat d'exception</h3>
-           <p>Et glace à la vanille de Madagascar 22€</p>
-           <i class="fas fa-check"></i>
+           <p>Et glace à la vanille de Madagascar<span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>
         </div>
-       <div class="dessert3">
+       <div class="mealBoxs">
            <h3>Mousse au chocolat </h3>
-           <p>Au piment d'Espelette et à la truffe noire 23€</p>
-           <i class="fas fa-check"></i>
+           <p>Au piment d'Espelette et à la truffe noire <span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>
        </div> 
     </section> 
 
@@ -90,8 +84,8 @@
  
  <footer>
     <div class="footerContain">
-        <img src="ohmyfood@2x.svg" alt="logo ohmyfood">
         <ul> 
+            <li><h3>ohmyfood</h3></li>
             <li><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</li>
             <li><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</li>
             <li>Mentions légales</li>
