modif html + responsive page d'accueil

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="blocMainPage">  
         <header>
-         <img src="ohmyfood@2x.svg" alt="logo ohmyfood">
+         <img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">
         </header> 
 
     <main>
@@ -30,11 +30,13 @@
     </section> 
    
      <section class="fonctionnement">
-       <h1 id="fonctTitle">Fonctionnement</h1>  
+       <h1 id="fonctTitle">Fonctionnement</h1>
+       <div id="fonctBloc"> 
        <div class="fonctBoxs"><a href="#"><p><span class="numbers">1</span><span class="fonctLogo"><i class="fas fa-mobile-alt"></i></span>Choisissez un restaurant</p></a></div>
        <div class="fonctBoxs"><a href="#"><p><span class="numbers">2</span><span class="fonctLogo"><i class="fas fa-list-ul"></i></span>Composez votre menu</p></a></div>
        <div class="fonctBoxs"><a href="#"><p><span class="numbers">3</span><span class="fonctLogo"><i class="fas fa-store"></i></span>Dégustez au restaurant</p></a></div>
-     </section>
+      </div> 
+      </section>
     
     <section class="restaurantsPresentation">
        <h1 id="restaurantsTitle">Restaurants</h1> 
@@ -102,8 +104,8 @@
 
 <footer>
     <div class="footerContain">
+      <h3>ohmyfood</h3>
         <ul> 
-            <li><h3>ohmyfood</h3></li>
             <li><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</li>
             <li><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</li>
             <li>Mentions légales</li>
