ajout des fonctionnalités et animation éclaircissement du bouton

--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Réservez le menu qui vous convient.
     Découvre des restaurants d'exception, séléctionnés par nos soins.
     Choisissez votre restaurant - Composez votre menu - Dégustez au restaurant">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/2897f175fe.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&amp;family=Shrikhand&amp;display=swap" rel="stylesheet">
     <title>Oh My Food-a la française</title> 
@@ -17,13 +17,14 @@
  
     <header>
         <nav> 
-        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
+        <a href="index.html" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
         </nav>
     </header>
   <section class="mealPicture"><img src="images/alafrançaise.jpg" alt="à la française"></section>
        
   <main class="mealBloc"> 
-  <h1><strong>À la française</strong><i class="far fa-heart"></i></h1> 
+  <div class="restaurantName"><h1><strong>À la française</strong></h1><div class="like"><i class="fas fa-heart"></i><i class="far fa-heart"></i></div></div> 
+  <div class="mealChoice">
     <section class="Starters">
       <h2>ENTRÉES</h2> 
       <div class="greenBorder"></div>
@@ -38,8 +39,7 @@
           <div class="mealBoxs"> 
               <h3>Soupe à l'oignon</h3>
               <p>Revisitée<span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p>
-              
-          </div>   
+         </div>   
     </section>
 
     <section class="mainMeals">
@@ -79,19 +79,20 @@
             <p>Myrtilles et pâte d’amande<span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>
        </div>
     </section> 
+   </div>
 
-    <div class="order"><button class="buttons" type="submit">Commander</button></div>
+    <div class="order"><a href="#" class="btn"><button class="buttons" type="submit">Commander</button></a></div>
  </main>   
  </div>
  
  <footer>
     <div class="footerContain">
         <ul> 
-            <li><h3>ohmyfood</h3></li>
-            <li><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</li>
-            <li><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
+            <li class="footerLinks"><a href="#"><h3>ohmyfood</h3></a></li>
+            <li class="footerLinks"><a href="#"><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</a></li>
+            <li class="footerLinks"><a href="#"><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</a></li>
+            <li class="footerLinks"><a href="#">Mentions légales</a></li>
+            <li class="footerLinks"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </ul>
     </div>
 </footer>
