--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="restaurants"> 
 
       <figure>
-      <a href="#" class="cardPresentation">
+      <a href="palettedesgouts.html" class="cardPresentation">
              <img src="images/palettedugout.jpg" alt="La Palette du Goût">
              <span class="newLabel">Nouveau</span> 
              <div class="cardDescription">
@@ -56,7 +56,7 @@
     </figure>
 
       <figure>
-      <a href="#" class="cardPresentation">
+      <a href="noteenchantee.html" class="cardPresentation">
            <img src="images/noteenchantee.jpg" alt="La Note Enchantée"> 
            <span class="newLabel">Nouveau</span> 
           <span class="infoPresentation">
@@ -70,7 +70,7 @@
     </figure>
 
      <figure>
-     <a href="#" class="cardPresentation">
+     <a href="alafrançaise.html" class="cardPresentation">
    
            <img src="images/alafrançaise.jpg" alt="À la française">
           <span class="infoPresentation">
@@ -84,7 +84,7 @@
     </figure>
      
      <figure>
-     <a href="#" class="cardPresentation">
+     <a href="delicedessens.html" class="cardPresentation">
            <img src="images/delicedessens.jpg" alt="Le délice des sens">  
           <span class="infoPresentation">
             <div class="cardDescription">
@@ -104,12 +104,13 @@
 
 <footer>
     <div class="footerContain">
-      <h3>ohmyfood</h3>
+      
         <ul> 
-            <li><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</li>
-            <li><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
+            <li class="footerLinks"><a href="#"><h3>ohmyfood</h3></a></li>
+            <li class="footerLinks"><a href="#"><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</a></li>
+            <li class="footerLinks"><a href="#"><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</a></li>
+            <li class="footerLinks"><a href="#">Mentions légales</a></li>
+            <li class="footerLinks"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </ul>
     </div>
 </footer>
