--- a/palettedesgouts.html
+++ b/palettedesgouts.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Réservez le menu qui vous convient.
     Découvre des restaurants d'exception, séléctionnés par nos soins.
     Choisissez votre restaurant - Composez votre menu - Dégustez au restaurant">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/2897f175fe.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&amp;family=Shrikhand&amp;display=swap" rel="stylesheet">
     <title>Oh My Food-la palette du goût</title> 
@@ -17,16 +17,15 @@
  
     <header>
         <nav> 
-        <a href="#" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
+        <a href="index.html" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
         </nav>
     </header>
    
         <section class="mealPicture"><img src="images/palettedugout.jpg" alt="la palette du goût"></section>
 
     <main class="mealBloc">     
-
-        <h1><strong>La palette du goût</strong><i class="far fa-heart"></i></h1>
-    
+        <div class="restaurantName"><h1><strong>La palette du goût</strong></h1><div class="like"><i class="fas fa-heart"></i><i class="far fa-heart"></i></div></div> 
+    <div class="mealChoice">
     <section class="starters">
         <h2>ENTRÉES</h2>
         <div class="greenBorder"></div>
@@ -77,7 +76,7 @@
            <p>Au piment d'Espelette et à la truffe noire <span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>
        </div> 
     </section> 
-
+    </div>
     <div class="order"><button class="buttons" type="submit">Commander</button></div>
  </main>   
  </div>
@@ -85,11 +84,11 @@
  <footer>
     <div class="footerContain">
         <ul> 
-            <li><h3>ohmyfood</h3></li>
-            <li><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</li>
-            <li><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
+            <li class="footerLinks"><a href="#"><h3>ohmyfood</h3></a></li>
+            <li class="footerLinks"><a href="#"><span id="forkLogo"><i class="fas fa-utensils"></i></span>Proposer un restaurant</a></li>
+            <li class="footerLinks"><a href="#"><span id="partnerLogo"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</a></li>
+            <li class="footerLinks"><a href="#">Mentions légales</a></li>
+            <li class="footerLinks"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </ul>
     </div>
 </footer>
