apparition progressive des menus + remplissage du coeur

--- a/delicedessens.html
+++ b/delicedessens.html
@@ -28,15 +28,15 @@
     <section class="starters">
         <h2>ENTRÉES</h2>
         <div class="greenBorder"></div>
-        <div class="mealBoxs">
+        <div class="mealBoxs starter1">
               <h3>Tartare de thon</h3>
               <p>Assaisonné au yuzu <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>    
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs starter2">
               <h3>Bouchée de homard croustillant</h3>
               <p>Et sa farandole de petits légumes<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs starter3">
               <h3>Velouté de cèpes</h3>
               <p>Aux truffes <span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p>            
         </div>       
@@ -45,15 +45,15 @@
     <section class="mainMeals">
         <h2>PLATS</h2>
         <div class="greenBorder"></div>
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal1">
                <h3>Poulet rôti aux herbes de Provence</h3>
                <p>Et sa crème de truffe <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p> 
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal2">
                <h3>Langouste rôtie</h3>
                <p>Et ses légumes de saison <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>     
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal3">
                <h3>Côte de boeuf Angus</h3>
                <p>Et sa purée de panais<span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>     
         </div>     
@@ -62,15 +62,15 @@
     <section class="desserts">
         <h2>DESSERTS</h2> 
         <div class="greenBorder"></div>
-        <div class="mealBoxs">
+        <div class="mealBoxs dessert1">
                <h3>Farandole de desserts</h3>
                <p>Du chef <span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p> 
         </div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert2">
                 <h3>Crème brulée</h3>
                 <p>Revisitée<span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>   
        </div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert3">
                 <h3>Tiramisu</h3>
                 <p>À la noisette<span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>     
        </div>
