--- a/noteenchantee.html
+++ b/noteenchantee.html
@@ -30,19 +30,19 @@
     <section class="starters">
         <h2>ENTRÉES</h2>
         <div class="greenBorder"></div>
-        <div class="mealBoxs">
+        <div class="mealBoxs starter1">
             <h3>Ravioles de foie gras</h3>
             <p>Accompagnés de leur crème à la truffe <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs starter2">
             <h3>Caviar osciètre</h3>
             <p>Sur blini à la farine de blé noir<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs starter3">
              <h3>Homard et espuma de potiron</h3>
              <p>Mariné aux zestes d'orange <span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p> 
         </div>
-        <div class="mealBoxs">
+        <div class="mealBoxs starter4">
             <h3>Foie gras de canard cuit entier</h3>
             <p>Confiture de figue et pain toasté<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
@@ -51,15 +51,15 @@
     <section class="mainMeals">
         <h2>PLATS</h2>
         <div class="greenBorder"></div>
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal1">
             <h3>Noix de coquilles Saint-Jacques</h3>
             <p>Sur lit de purée de céleri-rave <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal2">
             <h3>Langoustine poêlée</h3>
             <p>Purée de patate douce<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal3">
             <h3>Mijoté de queue de boeuf</h3>
             <p>Et riz sauvage aux zestes de citron<span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>
         </div>
@@ -68,15 +68,15 @@
     <section class="desserts">
         <h2>DESSERTS</h2> 
         <div class="greenBorder"></div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert1">
            <h3>Macaron noisette et chocolat</h3>
            <p>Glace au caramel brun et sel de Guérande<span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p>
        </div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert2">
            <h3>Baba au rhum revisité</h3>
            <p>Avec son coulis de citron <span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>   
        </div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert3">
            <h3>Tarte au citron meringuée</h3>
            <p>Déstructurée<span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>
        </div>
