--- a/palettedesgouts.html
+++ b/palettedesgouts.html
@@ -29,15 +29,15 @@
     <section class="starters">
         <h2>ENTRÉES</h2>
         <div class="greenBorder"></div>
-        <div class="mealBoxs">
+        <div class="mealBoxs starter1">
             <h3>Fricassée d'escargot</h3>
             <p>Au piment d'Espelette <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs starter2">
             <h3>Foie gras de canard mi-cuit</h3>
             <p>Et ses copeaux de truffe noire <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs starter3">
             <h3>Oeuf au plat</h3>
             <p>Assaisonné à la truffe sur lit de caviar<span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p>
         </div>
@@ -46,15 +46,15 @@
     <section class="mainMeals">
         <h2>PLATS</h2>
         <div class="greenBorder"></div>
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal1">
             <h3>Filet de boeuf aux herbes</h3>
             <p>Accompagné de sa ribambelle de légumes <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal2">
             <h3>Parmentier de queue de boeuf</h3>
             <p>À la truffe noire sur sa purée de panais <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
         </div> 
-        <div class="mealBoxs">
+        <div class="mealBoxs m_meal3">
             <h3>Filet de turbot</h3>
             <p>Aux agrumes <span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>
         </div>
@@ -63,15 +63,15 @@
     <section class="desserts">
         <h2>DESSERTS</h2> 
         <div class="greenBorder"></div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert1">
            <h3>Paris-Brest</h3>
            <p>Revisité<span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p>
         </div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert2">
            <h3>Macaron au chocolat d'exception</h3>
            <p>Et glace à la vanille de Madagascar<span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>
         </div>
-       <div class="mealBoxs">
+       <div class="mealBoxs dessert3">
            <h3>Mousse au chocolat </h3>
            <p>Au piment d'Espelette et à la truffe noire <span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>
        </div> 
