loading spinner au chargement de la page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 </head> 
 
 <body>
+  <div id="loaderBloc">
+    <img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">
+  <div class="loader">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+</div>
+
   <div id="blocMainPage">  
         <header>
          <img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">
