--- a/delicedessens.html
+++ b/delicedessens.html
@@ -20,7 +20,7 @@
         <a href="index.html" class="back"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood@2x.svg" alt="logo ohmyfood">  
         </nav>
     </header>
-    <section class="mealPicture"><img src="images/delicedessens.jpg" alt="le délice des sens"></section>
+    <img class="mealPicture" src="images/delicedessens.jpg" alt="le délice des sens">
     
     <main class="mealBloc">     
     <div class="restaurantName"><h1><strong>Le délice des sens</strong></h1><div class="like"><i class="fas fa-heart"></i><i class="far fa-heart"></i></div></div> 
@@ -29,33 +29,58 @@
         <h2>ENTRÉES</h2>
         <div class="greenBorder"></div>
         <div class="mealBoxs starter1">
+             <div class="info_meal">
               <h3>Tartare de thon</h3>
-              <p>Assaisonné au yuzu <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>    
+              <p>Assaisonné au yuzu</p>    
+             </div>  
+            <span class="prices"><strong>25€</strong></span>     
+            <span class="check"><i class="fas fa-check"></i></span>     
         </div> 
+
         <div class="mealBoxs starter2">
+              <div class="info_meal">
               <h3>Bouchée de homard croustillant</h3>
-              <p>Et sa farandole de petits légumes<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
-        </div> 
+              <p>Et sa farandole de petits légumes</p>
+              </div> 
+              <span class="prices"><strong>35€</strong></span>     
+              <span class="check"><i class="fas fa-check"></i></span>
+            </div> 
         <div class="mealBoxs starter3">
+            <div class="info_meal">
               <h3>Velouté de cèpes</h3>
-              <p>Aux truffes <span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p>            
-        </div>       
+              <p>Aux truffes</p>            
+            </div> 
+            <span class="prices"><strong>20€</strong></span>     
+            <span class="check"><i class="fas fa-check"></i></span>
+            </div>       
     </section>
 
     <section class="mainMeals">
         <h2>PLATS</h2>
         <div class="greenBorder"></div>
         <div class="mealBoxs m_meal1">
+               <div class="info_meal">
                <h3>Poulet rôti aux herbes de Provence</h3>
-               <p>Et sa crème de truffe <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p> 
+               <p>Et sa crème de truffe</p> 
+               </div> 
+               <span class="prices"><strong>40€</strong></span>     
+               <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs m_meal2">
+               <div class="info_meal"> 
                <h3>Langouste rôtie</h3>
-               <p>Et ses légumes de saison <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>     
-        </div> 
+               <p>Et ses légumes de saison</p>     
+               </div> 
+               <span class="prices"><strong>35€</strong></span>     
+               <span class="check"><i class="fas fa-check"></i></span>
+            </div> 
         <div class="mealBoxs m_meal3">
+            <div class="info_meal"> 
                <h3>Côte de boeuf Angus</h3>
-               <p>Et sa purée de panais<span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>     
+               <p>Et sa purée de panais</p>     
+            </div> 
+            <span class="prices"><strong>44€</strong></span>     
+            <span class="check"><i class="fas fa-check"></i></span>
         </div>     
     </section>
 
@@ -63,16 +88,28 @@
         <h2>DESSERTS</h2> 
         <div class="greenBorder"></div>
         <div class="mealBoxs dessert1">
+              <div class="info_meal">
                <h3>Farandole de desserts</h3>
-               <p>Du chef <span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p> 
-        </div>
+               <p>Du chef</p> 
+              </div>
+            <span class="prices"><strong>18€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
+            </div>
        <div class="mealBoxs dessert2">
+              <div class="info_meal">
                 <h3>Crème brulée</h3>
-                <p>Revisitée<span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>   
+                <p>Revisitée</p> 
+              </div>    
+                <span class="prices"><strong>22€</strong></span>
+                <span class="check"><i class="fas fa-check"></i></span>
        </div>
        <div class="mealBoxs dessert3">
+               <div class="info_meal">
                 <h3>Tiramisu</h3>
-                <p>À la noisette<span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>     
+                <p>À la noisette</p> 
+               </div>
+                <span class="prices"><strong>23€</strong></span> 
+                <span class="check"><i class="fas fa-check"></i></span>   
        </div>
     </section> 
     </div>
