--- a/noteenchantee.html
+++ b/noteenchantee.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-       <section class="mealPicture"><img src="images/noteenchantee.jpg" alt="la note enchantée"></section>
+    <img class="mealPicture" src="images/noteenchantee.jpg" alt="la note enchantée">
      
    <main class="mealBloc"> 
         
@@ -31,20 +31,36 @@
         <h2>ENTRÉES</h2>
         <div class="greenBorder"></div>
         <div class="mealBoxs starter1">
+            <div class="info_meal">
             <h3>Ravioles de foie gras</h3>
-            <p>Accompagnés de leur crème à la truffe <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>
+            <p>Accompagnés de leur crème à la truffe</p>
+            </div>
+            <span class="prices"><strong>25€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs starter2">
+            <div class="info_meal">
             <h3>Caviar osciètre</h3>
-            <p>Sur blini à la farine de blé noir<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
+            <p>Sur blini à la farine de blé noir</p>
+            </div>
+            <span class="prices"><strong>35€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs starter3">
+            <div class="info_meal">
              <h3>Homard et espuma de potiron</h3>
-             <p>Mariné aux zestes d'orange <span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p> 
-        </div>
+             <p>Mariné aux zestes d'orange</p> 
+            </div> 
+            <span class="prices"><strong>20€</strong></span> 
+            <span class="check"><i class="fas fa-check"></i></span>
+            </div>
         <div class="mealBoxs starter4">
+            <div class="info_meal">
             <h3>Foie gras de canard cuit entier</h3>
-            <p>Confiture de figue et pain toasté<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
+            <p>Confiture de figue et pain toasté</p>
+            </div> 
+            <span class="prices"><strong>35€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
     </section>
 
@@ -52,16 +68,28 @@
         <h2>PLATS</h2>
         <div class="greenBorder"></div>
         <div class="mealBoxs m_meal1">
+            <div class="info_meal">
             <h3>Noix de coquilles Saint-Jacques</h3>
-            <p>Sur lit de purée de céleri-rave <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p>
+            <p>Sur lit de purée de céleri-rave</p>
+            </div> 
+            <span class="prices"><strong>40€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs m_meal2">
+            <div class="info_meal">
             <h3>Langoustine poêlée</h3>
-            <p>Purée de patate douce<span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
+            <p>Purée de patate douce</p>
+            </div> 
+            <span class="prices"><strong>35€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs m_meal3">
+            <div class="info_meal">
             <h3>Mijoté de queue de boeuf</h3>
-            <p>Et riz sauvage aux zestes de citron<span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>
+            <p>Et riz sauvage aux zestes de citron</p>
+            </div> 
+            <span class="prices"><strong>44€</strong></span> 
+            <span class="check"><i class="fas fa-check"></i></span>
         </div>
     </section>
 
@@ -69,17 +97,29 @@
         <h2>DESSERTS</h2> 
         <div class="greenBorder"></div>
        <div class="mealBoxs dessert1">
+           <div class="info_meal">
            <h3>Macaron noisette et chocolat</h3>
-           <p>Glace au caramel brun et sel de Guérande<span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p>
+           <p>Glace au caramel brun et sel de Guérande</p>
+           </div>  
+           <span class="prices"><strong>18€</strong></span> 
+           <span class="check"><i class="fas fa-check"></i></span>
        </div>
        <div class="mealBoxs dessert2">
+           <div class="info_meal">
            <h3>Baba au rhum revisité</h3>
-           <p>Avec son coulis de citron <span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>   
-       </div>
+           <p>Avec son coulis de citron</p>   
+           </div> 
+           <span class="prices"><strong>22€</strong></span>
+           <span class="check"><i class="fas fa-check"></i></span>
+     </div>
        <div class="mealBoxs dessert3">
+           <div class="info_meal">
            <h3>Tarte au citron meringuée</h3>
-           <p>Déstructurée<span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>
-       </div>
+           <p>Déstructurée</p>
+           </div>
+           <span class="prices"><strong>23€</strong></span> 
+           <span class="check"><i class="fas fa-check"></i></span>
+        </div>
     </section> 
     </div>
     <div class="order"><button class="buttons" type="submit">Commander</button></div>
