--- a/palettedesgouts.html
+++ b/palettedesgouts.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
    
-        <section class="mealPicture"><img src="images/palettedugout.jpg" alt="la palette du goût"></section>
+    <img class="mealPicture" src="images/palettedugout.jpg" alt="la palette du goût">
 
     <main class="mealBloc">     
         <div class="restaurantName"><h1><strong>La palette du goût</strong></h1><div class="like"><i class="fas fa-heart"></i><i class="far fa-heart"></i></div></div> 
@@ -30,16 +30,28 @@
         <h2>ENTRÉES</h2>
         <div class="greenBorder"></div>
         <div class="mealBoxs starter1">
+            <div class="info_meal">
             <h3>Fricassée d'escargot</h3>
-            <p>Au piment d'Espelette <span class="prices"><strong>25€</strong></span><i class="fas fa-check"></i></p>
+            <p>Au piment d'Espelette</p>
+            </div> 
+            <span class="prices"><strong>25€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs starter2">
+            <div class="info_meal">
             <h3>Foie gras de canard mi-cuit</h3>
-            <p>Et ses copeaux de truffe noire <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
+            <p>Et ses copeaux de truffe noire</p>
+            </div>
+            <span class="prices"><strong>35€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs starter3">
+            <div class="info_meal">
             <h3>Oeuf au plat</h3>
-            <p>Assaisonné à la truffe sur lit de caviar<span class="prices"><strong>20€</strong></span><i class="fas fa-check"></i></p>
+            <p>Assaisonné à la truffe sur lit de caviar</p>
+            </div>
+            <span class="prices"><strong>20€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div>
     </section>
 
@@ -47,16 +59,28 @@
         <h2>PLATS</h2>
         <div class="greenBorder"></div>
         <div class="mealBoxs m_meal1">
+            <div class="info_meal">
             <h3>Filet de boeuf aux herbes</h3>
-            <p>Accompagné de sa ribambelle de légumes <span class="prices"><strong>40€</strong></span><i class="fas fa-check"></i></p>
+            <p>Accompagné de sa ribambelle de légumes</p>
+            </div>
+            <span class="prices"><strong>40€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs m_meal2">
+            <div class="info_meal">
             <h3>Parmentier de queue de boeuf</h3>
-            <p>À la truffe noire sur sa purée de panais <span class="prices"><strong>35€</strong></span><i class="fas fa-check"></i></p>
+            <p>À la truffe noire sur sa purée de panais</p>
+            </div>
+            <span class="prices"><strong>35€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div> 
         <div class="mealBoxs m_meal3">
+            <div class="info_meal">
             <h3>Filet de turbot</h3>
-            <p>Aux agrumes <span class="prices"><strong>44€</strong></span><i class="fas fa-check"></i></p>
+            <p>Aux agrumes</p>
+            </div>
+            <span class="prices"><strong>44€</strong></span>
+            <span class="check"><i class="fas fa-check"></i></span>
         </div>
     </section>
 
@@ -64,17 +88,29 @@
         <h2>DESSERTS</h2> 
         <div class="greenBorder"></div>
        <div class="mealBoxs dessert1">
+           <div class="info_meal">
            <h3>Paris-Brest</h3>
-           <p>Revisité<span class="prices"><strong>18€</strong></span><i class="fas fa-check"></i></p>
+           <p>Revisité</p>
+           </div>
+           <span class="prices"><strong>18€</strong></span>
+           <span class="check"><i class="fas fa-check"></i></span>
         </div>
        <div class="mealBoxs dessert2">
+           <div class="info_meal">
            <h3>Macaron au chocolat d'exception</h3>
-           <p>Et glace à la vanille de Madagascar<span class="prices"><strong>22€</strong></span><i class="fas fa-check"></i></p>
+           <p>Et glace à la vanille de Madagascar</p>
+           </div>
+           <span class="prices"><strong>22€</strong></span>
+           <span class="check"><i class="fas fa-check"></i></span>
         </div>
        <div class="mealBoxs dessert3">
+           <div class="info_meal">
            <h3>Mousse au chocolat </h3>
-           <p>Au piment d'Espelette et à la truffe noire <span class="prices"><strong>23€</strong></span><i class="fas fa-check"></i></p>
-       </div> 
+           <p>Au piment d'Espelette et à la truffe noire</p>
+           </div>
+           <span class="prices"><strong>23€</strong></span>
+           <span class="check"><i class="fas fa-check"></i></span>
+        </div> 
     </section> 
     </div>
     <div class="order"><button class="buttons" type="submit">Commander</button></div>
