code plus ordonné

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div> 
       </a> 
             <div class="like">
-            <i class="far fa-heart" aria-hidden="true"></i>
+            <i class="far fa-heart"></i>
             <i class="fas fa-heart"></i>
             </div>
     </figure>
